namespace and project folder structure updates

--- a/VagrantTray/VagrantTray.csproj
+++ b/VagrantTray/VagrantTray.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F39D9553-72ED-4032-AD30-AAF4731E23D8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VagrantTray</RootNamespace>
+    <RootNamespace>MikeWaltonWeb.VagrantTray</RootNamespace>
     <AssemblyName>VagrantTray</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -56,13 +56,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="SettingsWindow.xaml.cs">
+    <Compile Include="UI\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="VagrantCommand.cs" />
-    <Compile Include="VagrantInstance.cs" />
-    <Compile Include="VagrantManager.cs" />
-    <Page Include="MainWindow.xaml">
+    <Compile Include="Business\VagrantCommand.cs" />
+    <Compile Include="Model\VagrantInstance.cs" />
+    <Compile Include="Business\VagrantManager.cs" />
+    <Page Include="UI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -70,11 +70,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="UI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="SettingsWindow.xaml">
+    <Page Include="UI\SettingsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -141,6 +141,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Vagrant.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
