--- a/VagrantTray/VagrantTray.csproj
+++ b/VagrantTray/VagrantTray.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Business\Utility\Windows\Win32Wrapper.cs" />
     <Compile Include="Business\VagrantExe\VagrantProcess.cs" />
     <Compile Include="Business\VagrantExe\VagrantStatusProcess.cs" />
+    <Compile Include="Business\VagrantExe\VagrantSuspendProcess.cs" />
     <Compile Include="Business\VagrantExe\VagrantUpProcess.cs" />
     <Compile Include="Model\ApplicationData.cs" />
     <Compile Include="Model\Bookmark.cs" />
