--- a/VagrantTray/VagrantTray.csproj
+++ b/VagrantTray/VagrantTray.csproj
@@ -73,8 +73,12 @@
     </ApplicationDefinition>
     <Compile Include="Business\SettingsManager.cs" />
     <Compile Include="Business\Utility\Windows\Win32Wrapper.cs" />
+    <Compile Include="Business\VagrantExe\VagrantDestroyProcess.cs" />
+    <Compile Include="Business\VagrantExe\VagrantReloadProcess.cs" />
     <Compile Include="Business\VagrantExe\VagrantProcess.cs" />
+    <Compile Include="Business\VagrantExe\VagrantHaltProcess.cs" />
     <Compile Include="Business\VagrantExe\VagrantStatusProcess.cs" />
+    <Compile Include="Business\VagrantExe\VagrantResumeProcess.cs" />
     <Compile Include="Business\VagrantExe\VagrantSuspendProcess.cs" />
     <Compile Include="Business\VagrantExe\VagrantUpProcess.cs" />
     <Compile Include="Model\ApplicationData.cs" />
