add and persist user settings for launch at startup and run as admin

--- a/VagrantTray/App.config
+++ b/VagrantTray/App.config
@@ -13,6 +13,15 @@
             <setting name="SavedBookmarks" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LaunchOnWindowsStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="RunAsAdministrator" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShellApplication" serializeAs="String">
+                <value>cmd</value>
+            </setting>
         </MikeWaltonWeb.VagrantTray.Properties.Settings>
     </userSettings>
 </configuration>
