--- a/VagrantTray/Properties/Settings.settings
+++ b/VagrantTray/Properties/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="SavedBookmarks" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="LaunchOnWindowsStartup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="RunAsAdministrator" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ShellApplication" Type="System.String" Scope="User">
+      <Value Profile="(Default)">cmd</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
