--- a/VagrantTray/VagrantTray.csproj
+++ b/VagrantTray/VagrantTray.csproj
@@ -185,6 +185,9 @@
   <ItemGroup>
     <None Include="Resources\VagrantWorking.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Red_Warning.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
