migrate settings when upgrading

--- a/VagrantTray/App.config
+++ b/VagrantTray/App.config
@@ -22,6 +22,9 @@
             <setting name="ShellApplication" serializeAs="String">
                 <value>cmd</value>
             </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MikeWaltonWeb.VagrantTray.Properties.Settings>
     </userSettings>
 </configuration>
