--- a/VagrantTray/Properties/Settings.settings
+++ b/VagrantTray/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="ShellApplication" Type="System.String" Scope="User">
       <Value Profile="(Default)">cmd</Value>
     </Setting>
+    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
