--- a/VagrantTray/packages.config
+++ b/VagrantTray/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoupdaterdotNet" version="1.2.1" targetFramework="net45" />
+  <package id="AutoupdaterdotNet" version="1.3.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
-  <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="net45" />
+  <package id="MvvmLightLibs" version="5.0.0.0" targetFramework="net45" />
+  <package id="Parse" version="1.3.1" targetFramework="net45" />
 </packages>
