--- a/VagrantTray/VagrantTray.csproj
+++ b/VagrantTray/VagrantTray.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Business\Utility\Comparers\BookmarkEqualityComparer.cs" />
     <Compile Include="Business\Utility\Comparers\VagrantInstanceEqualityComparer.cs" />
     <Compile Include="Business\Utility\Windows\Win32Wrapper.cs" />
+    <Compile Include="Business\VagrantExe\Processes\IVagrantEventProcess.cs" />
     <Compile Include="Business\VagrantExe\Processes\VagrantDestroyProcess.cs" />
     <Compile Include="Business\VagrantExe\Processes\VagrantReloadProcess.cs" />
     <Compile Include="Business\VagrantExe\Processes\VagrantProcess.cs" />
