include release notes in solution

--- a/VagrantTray/VagrantTray.csproj
+++ b/VagrantTray/VagrantTray.csproj
@@ -223,6 +223,9 @@
   <ItemGroup>
     <None Include="Resources\Vagrant.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Deploy\releasenotes.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
